--- a/public/css/movie.css
+++ b/public/css/movie.css
@@ -24,9 +24,8 @@ body {
 }
 
 header {
-  height: 6%;
+  height: 60px;
   width: 100%;
-  font-size: x-large;
   background-color: var(--headerbg);
   display: flex;
   align-items: center;
@@ -35,8 +34,16 @@ header {
 
 header a {
   text-decoration: none;
+  font-size: 24px;
+  font-weight: 400;
   color: var(--txt);
-  font-weight: 600;
+  padding: 2px 7px 4px 7px;
+  transition: all 0.4s;
+  border-radius: 10px;
+}
+
+header a:hover {
+  background-color: #302b3f;
 }
 
 img {
@@ -52,6 +59,7 @@ h2 {
   right: 0px;
   top: 70px;
   background-color: #17ca1d;
+  color: #1b1b1b;
   width: 300px;
   padding: 10px 0px 10px 10px;
   border-radius: 15px 0px 0px 15px;
@@ -103,6 +111,25 @@ h2 {
 .btn:hover {
   color: #212427;
   background-color: #4caf50;
+  transition: all 0.3s ease;
+}
+
+.btn2 {
+  display: inline-block;
+  position: relative;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 15px;
+  border: 2px solid #4caf50;
+  background-color: transparent;
+  color: #212427;
+  background-color: #4caf50;
+  transition: all 0.3s ease;
+}
+
+.btn2:hover {
+  color: #4caf50;
+  background-color: transparent;
 }
 
 .mainbox {
@@ -140,6 +167,75 @@ h2 {
   justify-content: center;
   flex-direction: column;
   position: relative;
+  color: var(--txt);
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg2);
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9894a3;
+}
+
+ul {
+  list-style: none;
+  background-color: var(--headerbg);
+  position: relative;
+  transform: translateX(100px);
+  z-index: 999;
+}
+
+ul li {
+  display: inline-block;
+  position: relative;
+}
+
+ul li a {
+  display: block;
+  padding: 10px;
+  color: var(--txt);
+  text-decoration: none;
+  text-align: center;
+  font-size: large;
+}
+
+ul li ul.dropdown li {
+  display: block;
+  border-radius: 20px;
+  white-space: nowrap;
+}
+
+ul li ul.dropdown {
+  min-width: 100%;
+  display: none;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--headerbg);
+}
+
+ul li a:hover {
+  background-color: #302b3f;
+}
+
+ul li:hover ul.dropdown {
+  display: block;
+  border-radius: 10px;
+}
+
+.profile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid var(--txt);
+  object-fit: cover;
+  margin: 3px 10px 0px 10px;
 }
 
 @media screen and (max-width: 1536px) {
