--- a/public/views/favorite.ejs
+++ b/public/views/favorite.ejs
@@ -15,24 +15,31 @@
   </head>
   <body>
     <header> 
-      <header> 
-        <a href="/">Home</a>
-        <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
-        <a href="/create">Add Movie</a>
-        <a href="/movieupdate">Update Movie</a>
-        <a href="/moviedelete">Delete Movie</a>
-        <% }%>
-        <% if (moviedata.roles == "User" ){ %>
-        <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
-        <% }%>
-        <% if (!moviedata.userName) { %>
-        <a href="/register">Sign Up</a>
-        <a href="/login">Sign In</a>
-        <% } %>
-        <% if (moviedata.userName) { %>
-        <a href="/logout">Sign out</a>
-        <% } %>
-      </header>
+      <a href="/">Home</a>
+      <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
+      <a href="/create">Add Movie</a>
+      <a href="/movieupdate">Update Movie</a>
+      <a href="/moviedelete">Delete Movie</a>
+      <% }%>
+      <% if (moviedata.roles == "User" ){ %>
+      <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
+      <% }%>
+      <% if (!moviedata.userName) { %>
+      <a href="/register">Sign Up</a>
+      <a href="/login">Sign In</a>
+      <% } %>
+      <% if (moviedata.userName) { %>
+      <ul>
+        <li>
+        <img src="images/noimage.jpg" alt="" class="profile">
+        <ul class="dropdown">
+          <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
+          <li><a href="/deleteuser/<%=moviedata.user_id%>"onclick="return confirm('You delete really')">Delete User</a></li>
+          <li><a href="/logout">Sign out</a></li>
+        </ul>
+        </li>
+      </ul>
+      <% } %>
     </header>
     <h1 class="welcome">Your Favorite List!</h1>
     <div class="mainbox">
