--- a/public/css/favorite.css
+++ b/public/css/favorite.css
@@ -83,7 +83,8 @@ img {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 7px;
+  background-color: var(--headerbg);
 }
 
 ::-webkit-scrollbar-thumb {
