--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,6 +20,7 @@
 
 body {
   background-color: var(--bg);
+  overflow-x: hidden;
 }
 
 header {
@@ -144,7 +145,8 @@ h2 {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 7px;
+  background-color: var(--headerbg);
 }
 
 ::-webkit-scrollbar-thumb {
