--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -24,10 +24,9 @@
       <% if (moviedata.userName) { %>
       <ul>
         <li>
-        <img src="images/noimage.jpg" alt="" class="profile">
+          <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
         <ul class="dropdown">
           <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/deleteuser/<%=moviedata.user_id%>"onclick="return confirm('You delete really')">Delete User</a></li>
           <li><a href="/logout">Sign out</a></li>
         </ul>
         </li>
@@ -35,7 +34,6 @@
       <% } %>
     </header>
     <div class="mainbox">
-      <div>
         <h1>Add Movie</h1>
           <form method="post" action="/create" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="Title"/>
@@ -46,7 +44,6 @@
             <br>
             <input type="submit" value="Add Movie" class="btn"/>
           </form>
-      </div>
     </div>
   </body>
 </html>
