--- a/public/views/favorite.ejs
+++ b/public/views/favorite.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/favorite.css">
     <style>
       .favtxt{
-        color: #212427;
+        color: #faf0e6;
         font-size: x-large;
         font-weight: 500;
       }
@@ -21,7 +21,7 @@
       <a href="/movieupdate">Update Movie</a>
       <a href="/moviedelete">Delete Movie</a>
       <% }%>
-      <% if (moviedata.roles == "User" ){ %>
+      <% if (moviedata.roles == "User"){ %>
       <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
       <% }%>
       <% if (!moviedata.userName) { %>
@@ -31,10 +31,9 @@
       <% if (moviedata.userName) { %>
       <ul>
         <li>
-        <img src="images/noimage.jpg" alt="" class="profile">
+          <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
         <ul class="dropdown">
           <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/deleteuser/<%=moviedata.user_id%>"onclick="return confirm('You delete really')">Delete User</a></li>
           <li><a href="/logout">Sign out</a></li>
         </ul>
         </li>
