--- a/public/views/moviedelete.ejs
+++ b/public/views/moviedelete.ejs
@@ -31,10 +31,9 @@
       <% if (moviedata.userName) { %>
       <ul>
         <li>
-        <img src="images/noimage.jpg" alt="" class="profile">
+          <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
         <ul class="dropdown">
           <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/deleteuser/<%=moviedata.user_id%>"onclick="return confirm('You delete really')">Delete User</a></li>
           <li><a href="/logout">Sign out</a></li>
         </ul>
         </li>
