--- a/public/views/update.ejs
+++ b/public/views/update.ejs
@@ -14,7 +14,7 @@
       <a href="/movieupdate">Update Movie</a>
       <a href="/moviedelete">Delete Movie</a>
       <% }%>
-      <% if (moviedata.roles == "User" ){ %>
+      <% if (moviedata.roles == "User"){ %>
       <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
       <% }%>
       <% if (!moviedata.userName) { %>
@@ -24,10 +24,9 @@
       <% if (moviedata.userName) { %>
       <ul>
         <li>
-        <img src="../images/noimage.jpg" alt="" class="profile">
+          <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
         <ul class="dropdown">
           <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/deleteuser/<%=moviedata.user_id%>"onclick="return confirm('You delete really')">Delete User</a></li>
           <li><a href="/logout">Sign out</a></li>
         </ul>
         </li>
@@ -43,7 +42,6 @@
       <input type="text"name="director" value="<%= movies.director%>"/>
       <br>
       <input type="file" name="imageFile"/>
-      <p><%= movies.imageFile%></p>
       <input type="submit" value="Update" />
     </form>
     <a href="/">Back to List</a>
